--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* ميلان لليسار */
+.clip-slant-left {
+  clip-path: polygon(0 0, 100% 5%, 100% 95%, 0 100%);
+}
+
+/* بدون ميلان */
+.clip-no-slant {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
