--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+ .menu-item {
+  position: relative;
+  padding-left: 1rem; /* مساحة للخط على اليسار */
+  transition: color 0.3s ease;
+}
+
+.menu-item::before {
+  content: '';
+  position: absolute;
+  left: 0; /* الخط على اليسار */
+  top: 0;
+  width: 4px; /* سمك الخط */
+  height: 100%;
+  background-color: #2C5DB6; /* لون الخط */
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.3s ease;
+}
+
+.menu-item:hover::before {
+  transform: scaleY(1);
+}
